--- a/style.css
+++ b/style.css
@@ -37,13 +37,15 @@ body{
     display: flex;
     gap: 10px;
     align-items: center;
-    background-color: transparent;
+    
+    
     
 }
 .nav__search input{
     border:none;
     font-size: 16px;
     width: 100%;
+    background-color: transparent;
 }
 .nav__search input:focus{
 outline: none;
@@ -90,7 +92,15 @@ outline: none;
 .section img{
     width: 100%;
 }
-
+.section__sale{
+    width:35%;
+    padding: 2%;
+    background-color: white;
+    border: 2px solid black;
+    position: absolute;
+    top: 10%;
+    left: 10%;
+}
 
 .recommdended{
     padding: 20px;
