--- a/style.css
+++ b/style.css
@@ -54,6 +54,9 @@ outline: none;
     gap: 10px;
     align-items: center;
 }
+.nav_menu{
+    display:none;
+}
 .mylearning{
     position: relative;
     cursor: pointer;
@@ -134,7 +137,10 @@ outline: none;
     margin-top: 10px;
 }
 .container__box {
-    width: 250px;  
+    
+    flex-grow: 1;
+    flex-basis: 20%;
+    margin:5px;  
 }
 .container__box img{
     width: 100%;
@@ -144,8 +150,6 @@ outline: none;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-   
-    
     margin-top: 10px;
 }
 .topics{
@@ -198,3 +202,35 @@ outline: none;
     margin-top: 10px;
     align-items: center;
 }
+
+
+
+@media screen and (max-width:800px){
+    body{
+        font-size: 10px;
+    }
+    .nav__search{
+        margin-left: 4px;
+        margin-right: 4px;
+    }
+    
+    
+}
+@media screen and (max-width:600px){
+    .container__box{
+        flex-basis: 40%;
+    }
+    .categories{
+        display: none;
+    }
+    .nav__search,.nav__options{
+        display: none;
+    }
+    .nav__title p{
+        display: none;
+    }
+    .nav_menu{
+        display: block;
+    }
+}
+
